[package]
name = "zexe_01_bench"
version = "0.1.0"
authors = [ "arkworks contributors" ]
description = "An implementation of the Groth 2016 zkSNARK proof system"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/groth16"
documentation = "https://docs.rs/ark-groth16/"
keywords = [ "zero knowledge", "cryptography", "zkSNARK", "SNARK", "Groth-Maller" ]
categories = [ "cryptography" ]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = [ "derive" ] }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }
bench-utils = { git = "https://github.com/arkworks-rs/utils", features = [ "print-trace"] }
ark-relations = { git = "https://github.com/arkworks-rs/snark", default-features = false }
ark-snark = { git = "https://github.com/arkworks-rs/snark", default-features = false }
rand = { version = "0.7", default-features = false }
rayon = { version = "1", optional = true }
criterion = "0.3.1"
ark-groth16 = {path = "../groth16/", default-features = false}
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }

[dev-dependencies]
csv = { version = "1" }

[features]
default = ["parallel"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-relations/std", "ark-std/std", "ark-groth16/std" ]
parallel = ["std", "ark-ec/parallel", "ark-ff/parallel", "ark-poly/parallel", "ark-groth16/parallel", "rayon"]
print-trace = [ "bench-utils/print-trace" ]

[[bench]]
name = "bls"
path = "bench/bls.rs"
harness = false

# [[example]]
# name = "groth16-recursive"
# path = "examples/recursive-snark/groth16.rs"
# required-features = ["std"]